--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^1.13.0",
+    "leaflet-geosearch": "^3.11.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -56,6 +58,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -64,6 +67,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
